# CharterDjangoSite

./: .env  pyproject.toml  render.yaml  test.txt
config/: settings.py
main/: urls.py  views.py
main/templates/main/: base.html
