[tool.poetry]
name = "charter-django-app"
version = "0.1.0"
description = ""
authors = ["Jay <blueberry.py@protonmail.com>"]
readme = "README.md"
packages = [{include = "charter_django_app"}]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3.2,<4.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
